# optparse-test

./: .gitmodules  stack.yaml
optparse-test/: optparse-test.cabal
optparse-test/app/: Main.hs
optparse-test/test/: Spec.hs
