name:                optparse-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/optparse-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Options.Applicative.Builder.Extra
                       Options.Applicative.Args
                       Data.Attoparsec.Args
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , directory
                     , conduit
                     , conduit-extra
                     , filepath
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

executable optparse-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , optparse-applicative
                     , optparse-simple
                     , optparse-test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite optparse-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , optparse-applicative
                     , optparse-simple
                     , optparse-test
                     , process
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/drwebb/optparse-test
